# OpenRath

./: .env.example  .flake8  .gitignore  .gitmodules  .pre-commit-config.yaml  .shellcheckrc  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  README_zh.md  mypy.ini  pyproject.toml  pytest.ini
.github/workflows/: checks.yml  ci-build.yml  ci-docs.yml  ci-lint.yml  ci-shellcheck.yml  ci-test-fast.yml  ci-test-opensandbox.yml  ci-test-openviking.yml
assets/readme/: README.md
docs/: Makefile  README.md  content_milestones.md  make.bat  release_audit.md  site_decisions.md  verification_log.md
docs/source/: conf.py  index.md  install.md
example/: 01_hello_agent.py  02_session_lineage.py  03_sandbox_backend.py  04_tools_builtin.py  05_custom_tool.py  06_mcp_tool.py  07_streaming.py  08_compress.py  09_memory.py  10_provider_variation.py  README.md  _chunk_print.py  _demo_echo_server.py  _on_event.py  _openai_provider.py  anthropic_provider.py  custom_tool_usage.py  lineage_export.py  mcp_tool_usage.py  memory_local_demo.py  memory_openviking_demo.py  sandbox_backend_local.py  sandbox_backend_opensandbox.py  session_usage.py  single_agent.py  streaming_chat.py
example/_shared/: __init__.py  echo_mcp_server.py  events.py  provider.py
example/engineering_agents/: README.md  agents.py  main.py  workflows.py
example/research_transformer/: .gitignore  README.md  __init__.py  main.py  prompts.py  providers.py  tools.py  workflow.py
example/trading_agents/: README.md  _env.py  agents.py  main.py  tools.py  workflow.py
scripts/: build_docs.bat  build_docs.sh  build_python_package.bat  build_python_package.sh  check_opensandbox.bat  check_opensandbox.sh  check_openviking.bat  check_openviking.sh  launch_opensandbox.bat  launch_opensandbox.sh  launch_openviking.bat  launch_openviking.sh  resolve_openviking_provider_env.py  run_openrath_test.bat  run_openrath_test.sh  stress.py
src/rath/: __init__.py
tests/: conftest.py  openai_env_provider.py  test_dotenv_autoload.py  test_import.py
tests/api/: test_public_surface.py
tests/backends/: test_local.py  test_local_async.py  test_opensandbox.py  test_opensandbox_async.py  test_opensandbox_thread_safety.py  test_registry_singleton.py  test_sandbox_refcount.py
tests/bench/: bench_complete_live.py  bench_dispatch_local.py  bench_dispatch_opensandbox.py  bench_loop_fanout.py  conftest.py
tests/concurrency/: test_lock_invariants.py  test_resource_key_serialization.py
tests/config/: conftest.py  test_mcp_from_config.py  test_memory_from_config.py  test_paths.py  test_provider_from_config.py  test_schema.py  test_secrets.py  test_store.py  test_store_caching.py
tests/conformance/: conftest.py  test_cancellation.py  test_code_run.py  test_command_run.py  test_concurrency.py  test_files.py  test_lifecycle.py  (+1 more)
(+337 files in other folders)
