[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "openrath"
version = "1.0.0"
description = "An open-source, torch-like API framework for dynamic multi-agent workflow."
readme = "README.md"
requires-python = ">=3.10,<3.14"
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "openai>=1.0.0",
    "pydantic>=2.0.0,<3",
    "python-dotenv>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/Rath-Team/OpenRath"
Repository = "https://github.com/Rath-Team/OpenRath"
"Bug Tracker" = "https://github.com/Rath-Team/OpenRath/issues"

[project.optional-dependencies]
opensandbox = [
    "opensandbox>=0.1.7",
    "opensandbox-code-interpreter>=0.1.2",
    "opensandbox-server>=0.1.12",
]

[tool.hatch.build.targets.wheel]
packages = ["src/rath"]

[dependency-groups]
dev = [
    "flake8>=7.3.0",
    "mypy>=1.20.2",
    "pytest>=9.0.3",
]
docs = [
    "sphinx>=8.1.0",
    "myst-parser>=4.0.0",
    "pydata-sphinx-theme>=0.15.4",
]
